# csv-spending-calculator

./: Cargo.toml
src/: app.rs  crossterm.rs  custom_formats.rs  main.rs  ui.rs
src/ui/: crossterm.rs  ui.rs
