[package]
name = "csv-spending-calculator"
version = "0.1.0"
edition = "2021"
authors = ["Julian Vesper <jvesper95@gmail.com>"]
description = "A minimal CLI tool to filter and diff turnovers of two different accounts"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
crossterm = { version = "0.23" }
csv = "1.1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
serde = { version = "1", features = ["derive"] }
tui = { version = "0.18", features = ["crossterm"] }
